<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <fragment
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            class="com.google.android.gms.maps.SupportMapFragment"/>
            <Button
                android:id="@+id/satView"
                style="@style/AppTheme"
                android:text="@string/btnSat"
                android:textSize="10sp"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"/>
            <Button
                android:id="@+id/mapView"
                style="@style/AppTheme"
                android:text="@string/btnMap"
                android:textSize="10sp"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="45dp"/>
    </RelativeLayout>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                style="@style/AppTheme"
                android:id="@+id/textViewStartPoint"
                android:text="@string/startPoint"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        style="@style/AppTheme"
                        android:id="@+id/startLocation"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:layout_weight="0"/>
                    <TextView
                        style="@style/AppTheme"
                        android:id="@+id/startAddressView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"/>
                </LinearLayout>
            <Button
                style="@style/AppTheme"
                android:id="@+id/btnStartPic"
                android:text="@string/btnPic"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
            <ImageView
                android:id="@+id/imageViewStart"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:visibility="visible"/>

            <TextView
                style="@style/AppTheme"
                android:id="@+id/textViewParkSpace"
                android:text="@string/parkSpace"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
            <Spinner
                style="@style/AppTheme"
                android:id="@+id/spinnerSpaceType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/spaceType"
                android:spinnerMode="dialog">
            </Spinner>
            <EditText
                style="@style/AppTheme"
                android:id="@+id/editTextSpaceNumber"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numberOfSpaces"/>

            <TextView
                style="@style/AppTheme"
                android:id="@+id/textViewRestrictions"
                android:text="@string/restrictions"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
            <Button
                style="@style/AppTheme"
                android:id="@+id/btnFree"
                android:text="@string/btnFree"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
            <Spinner
                style="@style/AppTheme"
                android:id="@+id/spinnerRestrictionType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/restrictionType"
                android:spinnerMode="dialog">
            </Spinner>
            <Spinner
                style="@style/AppTheme"
                android:id="@+id/spinnerRestrictionDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/restrictionDuration"
                android:spinnerMode="dialog">
            </Spinner>

            <TextView
                style="@style/AppTheme"
                android:id="@+id/textViewStartTime"
                android:text="@string/startTime"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    style="@style/AppTheme"
                    android:id="@+id/spinnerStartDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:prompt="@string/startDay"
                    android:spinnerMode="dialog"
                    android:layout_weight="1">
                </Spinner>
                <EditText
                    style="@style/AppTheme"
                    android:id="@+id/editTextStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                style="@style/AppTheme"
                android:id="@+id/textViewEndTime"
                android:text="@string/endTime"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    style="@style/AppTheme"
                    android:id="@+id/spinnerEndDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:prompt="@string/endDay"
                    android:spinnerMode="dialog"
                    android:layout_weight="1">
                </Spinner>
                <EditText
                    style="@style/AppTheme"
                    android:id="@+id/editTextEndTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:layout_weight="1"/>
            </LinearLayout>
            <EditText
                style="@style/AppTheme"
                android:id="@+id/editTextPrice"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"/>
            <Button
                style="@style/AppTheme"
                android:id="@+id/btnAddRestriction"
                android:text="@string/btnAddRestriction"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                style="@style/AppTheme"
                android:id="@+id/textViewEndPoint"
                android:text="@string/endPoint"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        style="@style/AppTheme"
                        android:id="@+id/endLocation"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:layout_weight="0"/>
                    <TextView
                        style="@style/AppTheme"
                        android:id="@+id/endAddressView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
            <Button
                style="@style/AppTheme"
                android:id="@+id/btnEndPic"
                android:text="@string/btnPic"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
            <ImageView
                android:id="@+id/imageViewEnd"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:visibility="visible"/>

            <Button
                style="@style/AppTheme"
                android:id="@+id/btnSubmit"
                android:text="@string/btnSubmit"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>